--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,6 +1,6 @@
 :root {
     --md-primary-fg-color:        #002366;
-    --md-primary-fg-color--light: #ECB7B7;
-    --md-primary-fg-color--dark:  #90030C;
+    --md-primary-fg-color--light: #b7baec;
+    --md-primary-fg-color--dark:  #180390;
   }
   
